# github-portfolio-auditor

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
configs/: action_impact_rules.yaml  app.yaml  github.yaml  llm.yaml  portfolio_rules.yaml  scoring.yaml
dashboard/: __init__.py  app.py  data_loader.py  history.py
dashboard/components/: redundancy_view.py  repo_detail.py
data/processed/MatALass/: portfolio_master_table.csv  portfolio_selection.json  ranking.json  ranking_summary.json  redundancy_analysis.json  repo_inventory.csv  repo_reviews.csv  repo_reviews.json  repo_scans.json  repo_scores.csv  repo_scores.json  repos_metadata.json  site_payload.json
data/raw/github/: MatALass_repos.json
docs/: architecture.md  portfolio_decision_rules.md  roadmap.md  scoring_methodology.md
scripts/: export_site_data.py  rebuild_sample_data.py  run_full_audit.py
src/portfolio_auditor/: __init__.py  audit_runner.py  cli.py  settings.py
src/portfolio_auditor/collectors/github/: client.py  collector.py  language_fetcher.py  readme_fetcher.py  tree_fetcher.py
src/portfolio_auditor/dashboard/: __init__.py  app.py  artifact_reader.py  data_loader.py  history.py  live_audit.py  metrics.py  optimizer.py  repo_sync.py  repository.py  styles.py
src/portfolio_auditor/dashboard/components/: __init__.py  live_audit.py  optimizer_view.py  overview.py  portfolio_view.py  redundancy_view.py  repo_detail.py  repo_table.py
src/portfolio_auditor/exports/: __init__.py  csv_exporter.py  json_exporter.py  markdown_exporter.py  site_exporter.py  sqlite_exporter.py
src/portfolio_auditor/fetchers/: archive_fetcher.py  clone_manager.py  repo_cache.py
src/portfolio_auditor/models/: __init__.py  portfolio_decision.py  repo_metadata.py  repo_review.py  repo_scan.py  repo_score.py
src/portfolio_auditor/ranking/: __init__.py  clustering.py  deduplication.py  portfolio_selection.py  ranker.py
src/portfolio_auditor/reviewing/: __init__.py  deterministic_review.py  llm_review.py  review_parser.py  review_prompt_builder.py
src/portfolio_auditor/scanners/: __init__.py  base.py  ci_scanner.py  code_quality_scanner.py  data_scanner.py  delivery_cleanliness_scanner.py  documentation_scanner.py  frontend_scanner.py  notebook_scanner.py  packaging_scanner.py  portfolio_signal_scanner.py  scan_orchestrator.py  security_hygiene_scanner.py  structure_scanner.py  testing_scanner.py
src/portfolio_auditor/scoring/: __init__.py  calibration.py  engine.py  explainability.py  penalties.py  policy_loader.py  policy_models.py  rules.py  weighting.py
src/portfolio_auditor/scoring/policies/: v1.yaml
src/portfolio_auditor/site/: api_schema.py  transformers.py
src/portfolio_auditor/utils/: encoding.py  git_utils.py  paths.py  text_metrics.py
tests/golden/: conftest.py  test_ranking_golden.py  test_review_golden.py  test_scoring_golden.py  test_selection_golden.py
tests/golden/fixtures/: __init__.py  scenario_builders.py
tests/golden/snapshots/: ranking_baseline.json  review_baseline.json  scoring_baseline.json  selection_baseline.json
tests/integration/: test_rebuild_sample_data.py
tests/smoke/: test_dashboard_artifacts_smoke.py
tests/unit/: test_calibration.py  test_collector_routing.py  test_dashboard_logic.py  test_decision_maps.py  test_deduplication_tfidf.py  test_deterministic_reviewer.py  test_github_collector_fallback.py  test_markdown_exporter.py  test_portfolio_selection.py  test_ranking_deduplication.py  test_repo_sync.py  test_review_parser.py  test_scanners.py  test_scanners_extended.py  test_scoring_engine.py  test_site_transformers.py
tests/unit/scoring/: test_policy_loader.py
