[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-portfolio-auditor"
version = "0.1.0"
description = "Deterministic-first GitHub repository portfolio auditor"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Mathieu" }
]
license = { text = "MIT" }
dependencies = [
  "requests>=2.32.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "typer>=0.12.3",
  "PyYAML>=6.0.1",
  "pandas>=2.2.0",
  "streamlit>=1.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
portfolio-auditor = "portfolio_auditor.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
portfolio_auditor = ["scoring/policies/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
extend-exclude = [
  "data",
  ".venv",
  ".pytest_cache",
  ".ruff_cache",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
# E501: line too long (handled by line-length above)
# B006: mutable default argument — sets used as dict values in ACTION_IMPACT_RULES
#        are module-level constants, not function defaults; false positive.
ignore = ["E501", "B006"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra --strict-config --strict-markers"
xfail_strict = true
markers = [
  "unit: fast isolated unit tests (no I/O, no network)",
  "integration: tests that touch the filesystem or external services",
  "smoke: high-level smoke tests for dashboard artifacts",
  "golden: snapshot/regression tests",
]

[tool.coverage.run]
branch = true
source = ["portfolio_auditor"]

[tool.coverage.report]
# 45 → 65 (batch 1+2) → 72 (batch 3: ci, cleanliness, structure scanners + dashboard logic)
# Next target: 80 — CLI, collector routing, site transformers
fail_under = 72
show_missing = true
skip_covered = false
precision = 2
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
